--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli -d ./libs/common/src/database/typeorm/typeorm.config-migrations.ts",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "db:seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js -d ./libs/common/src/database/typeorm/typeorm.config-migrations.ts seed"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
@@ -49,7 +50,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "typeorm-extension": "^2.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
